--- a/starter_code/templates/forms/new_artist.html
+++ b/starter_code/templates/forms/new_artist.html
@@ -1,3 +1,4 @@
+
 {% extends 'layouts/main.html' %}
 {% block title %}New Artist{% endblock %}
 {% block content %}
@@ -26,13 +27,25 @@
       <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.state, autofocus = true) }}
+        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="genres">Website</label>
+        {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+      </div>
+      <div class="form-group">
+        <label for="genres">Image Link</label>
+        {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
       </div>
       <div class="form-group">
           <label for="genres">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.state, autofocus = true) }}
+          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
         </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+        <div class="form-group">
+          <label for="genres">Seeking Description</label>
+          {{ form.seeking_description(class_ = 'form-control', placeholder='Description', autofocus = true) }}
+        </div>
+      <input type="submit" value="Create Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
